login to Nessus before each scan export, rather than once at startup

--- a/nessusbeat.yml
+++ b/nessusbeat.yml
@@ -9,6 +9,8 @@ nessusbeat:
   #api_username:
   #api_password:
 
+name: nessusbeat
+
 #================================ General =====================================
 
 # The name of the shipper that publishes the network data. It can be used to group
