--- a/_meta/beat.yml
+++ b/_meta/beat.yml
@@ -4,9 +4,9 @@
 
 nessusbeat:
   report_path: /opt/nessus/var/nessus/users/admin/reports
-  # Path to root certificates.
   #cacert_path:
-  # The Nessus API URL.
   #api_url:
   #api_username:
   #api_password:
+
+name: nessusbeat
